syntax = "proto3";
package proto;

option go_package = "final/proto";

service SupplierService{
  rpc CreateDelivery (ProductInfo) returns (ShipTime) {}
}

message ProductInfo {
  string name = 1;
  int32 quantity = 2;
}

message ShipTime {
  int32 days = 1;
}